--- a/index.html
+++ b/index.html
@@ -5,8 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mergaite</title>
+    <style>
+        body{
+            background-color:#F8F8F8;
+        }
+        #menu{
+            margin: 0;
+            margin-right: 10%;
+	        width: 900px;
+	        font-family: sans-serif;
+        }
+
+        #menu li {
+            margin: 0;
+	        display:block;
+	        width:120px;
+	        float: left;
+	        margin-left:2px;
+	        
+        }
+        .mainImg {
+            float: right;
+            margin-top: 15%;
+        }
+    </style>
+
 </head>
 <body>
+    <img src="./dv.png" alt="logo failed">
+   
+    <img class="mainImg" src="./mergaite.png" alt="image failed">
     
+    <main>
+        <nav>
+            <ul id="menu">
+                <li>Home</li>
+                <li>Tracks</li>
+                <li>Libary</li>
+                <li>Community</li>
+                <li>sign in</li>
+            </ul>
+        </nav>
+        <h1>404</h1>
+        <p>the link is broken or the page has been moved.</p>
+    </main>
 </body>
 </html>
