--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mergaite</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
     <style>
         body{
             background-color:#F8F8F8;
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            font-family: 'Inconsolata';
             font-variant-numeric: slashed-zero;
             width: 800px;
         }
@@ -19,16 +20,15 @@
         }
         .button{
             position: relative;
-            top: 30px;
             text-transform: uppercase;
             text-align: center;
             border-radius: 15px;
-            border: 2px solid #9E9E9E;
-            padding: 5px;
+            border: 4px solid #9E9E9E;
+            padding: 3px;
             width: 10px;
             height: 20px;
         }
-        #menu{
+        .menu{
             position: relative;
             color:#9E9E9E;
             left: 95%;
@@ -38,7 +38,7 @@
 	        width: 900px;
         }
 
-        #menu li {
+        .menu li {
             position: relative;
             top: -75px;
             margin: 0;
@@ -68,7 +68,7 @@
         }
 
         .para{
-            width: 25%;
+            width: 60%;
             margin: 0;
         }
         h1{
@@ -81,7 +81,7 @@
     <nav>
     <img class="logo" src="./dv.png" alt="logo failed">
 
-        <ul id="menu">
+        <ul class="menu">
             <li>Home</li>
             <li>Tracks</li>
             <li>Libary</li>
@@ -94,8 +94,8 @@
     
     <main class="info">
         
-        <h1 style="font-size: 200px; ">404</h1>
-        <p style="font-size: 30px;" class="para">the link is broken or the page has been moved.</p>
+        <h1 style="font-size: 160px; ">404</h1>
+        <p style="font-size: 40px;" class="para">the link is broken or the page has been moved.</p>
     </main>
 </body>
 </html>
